--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,125 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.searchArt {
+  max-width: 100%;
   min-height: 100vh;
+  padding: calc(24px + 0.75vw) 7.5vw;
+}
+
+.searchForm {
+  grid-gap: calc(8px + 0.25vw);
+  display: flex;
+  margin-bottom: calc(16px + 0.5vw);
+  padding: calc(24px + 0.75vw) 7.5vw;
+}
+
+.searchInput {
+  background: linear-gradient(-45deg, #00ba84, #e8fff7, #fff, #fff);
+  background-position: 20% 50%;
+  background-size: 400% 400%;
+  border: 2px solid;
+  border-radius: 50px;
+  box-sizing: border-box;
+  color: #000006;
+  flex-basis: 100%;
+  min-width: 0;
+  padding: calc(8px + 0.25vw);
+  text-overflow: ellipsis;
+}
+
+.searchButton {
+  border: 2px solid;
+  border-radius: 50px;
+  padding-right: calc(8px + 0.25vw);
+  position: relative;
+  width: 20%;
+}
+
+.art-container {
+  grid-column-gap: calc(8px + 0.25vw);
+  grid-row-gap: calc(8px + 0.25vw);
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 1;
+  margin-bottom: calc(48px + 1.5vw);
+  max-width: 100%;
+  min-height: 50vh;
+}
+
+.result-object,
+.result-object:hover {
+  border: 0;
+  color: currentColor;
+  text-decoration: none;
+}
+.result-object {
+  border-radius: 4px;
+  display: block;
+  overflow: hidden;
+  padding: calc(8px + 0.25vw);
+}
+
+.result-object .image-container {
+  align-items: center;
+  display: flex;
+  height: 300px;
+  justify-content: center;
+  margin-bottom: calc(16px + 0.5vw);
+  max-width: 100%;
+  position: relative;
+}
+
+.result-object .image-container img {
+  max-height: 100%;
+  max-width: 100%;
+  position: absolute;
+}
+
+.result-object .info {
+  grid-row-gap: calc(8px + 0.25vw);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.result-object .info .title {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  font-size: calc(1.125rem + 0.18779vw - 0.70423px);
+  font-weight: 600;
+  line-height: 1.1;
+  max-height: 2.2em;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.result-object .info .attribution {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  font-size: calc(0.875rem + 0.18779vw - 0.70423px);
+  height: 2em;
+  line-height: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (min-width: 500px) {
+  .art-container {
+    grid-template-columns: repeat(2, 1fr);
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 700px) {
+  .art-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1000px) {
+  .art-container {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
