--- a/src/App.css
+++ b/src/App.css
@@ -25,18 +25,26 @@
   color: #000006;
   flex-basis: 100%;
   min-width: 0;
-  padding: calc(8px + 0.25vw);
+  padding: calc(15px + 0.25vw);
   text-overflow: ellipsis;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .searchButton {
-  border: 2px solid;
+  border: 1px solid rgba(0, 0, 0, 0.75);
   border-radius: 50px;
-  padding-right: calc(8px + 0.25vw);
+  padding-right: calc(10px + 0.25vw);
   position: relative;
-  width: 20%;
-  font-size: 18px;
+  width: 25%;
+  font-size: 1.2rem;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
+  transition: background-color 250ms;
+  cursor: pointer;
+}
+
+.searchButton:hover {
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 .art-container {
